Жизненный цикл компонентов Spring Boot приложения